[tool.poetry]
name = "coze-mcp-server"
version = "0.1.0"
description = "MCP Server for Coze(coze.com/coze.cn)"
authors = ["chyroc <chyroc@bytedance.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.7"
cozepy = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.6.0"
pre-commit = "^2.9.0"
respx = "^0.21.1"
mypy = "^1.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
exclude = [
    "examples/",
    "tests/"
]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_lines = [
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
